# qt_telecom_model

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  pch.h
src/app/: CMakeLists.txt  TelecomTreeModel.cpp  TelecomTreeModel.h  main.cpp  utility.cpp  utility.h
src/app/Database/: IDataRepository.cpp  IDataRepository.h  SQLiteRepository.cpp  SQLiteRepository.h  models.h
style/: treeview_style.qss
